# otus-basic2

./: CMakeLists.txt  Main.cpp  README.md  scores.txt
HelpingFunctionLibrary/: CMakeLists.txt  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  random_value.cpp  random_value.h
